plugins {
    id 'application'
    id 'com.gradleup.shadow' version '9.2.0'
}

dependencies {
    implementation project(':Renderer')
    implementation project(':PainterJava2D')
    implementation project(':PainterSkija')
    implementation project(':DebuggerSwing')

    implementation 'com.github.taucher2003:t2003-logger-impl:1.0.2'
	implementation 'com.github.taucher2003:t2003-logger-binder:1.0.2'
}

application {
    mainClass = 'net.buildabrowser.babbrowser.browser.Main'
    applicationDefaultJvmArgs = [
        '-Xms32m',
        '-XX:MaxHeapFreeRatio=10', '-XX:MinHeapFreeRatio=10',
        '-XX:G1PeriodicGCInterval=3000',
        '-XX:+G1PeriodicGCInvokesConcurrent',
        '-XX:+UnlockExperimentalVMOptions', '-XX:+UseCompactObjectHeaders',
        '-Djava.net.preferIPv4Stack=true', '-XX:CICompilerCount=2'
    ]
}

run {
    if (project.hasProperty('assert')) {
        enableAssertions = true
    }
    if (project.hasProperty('debug')) {
        systemProperty "babbrowser.debug", project.getProperty('debug')
    }
}

jar {
	manifest {
		attributes(
			"Main-Class": application.mainClass,
			"Multi-Release": "true"
		)
	}
}

java {
    sourceCompatibility = JavaVersion.VERSION_24
    targetCompatibility = JavaVersion.VERSION_24
}